// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CStack with element as nav 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  padding: 1.25rem;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
  border-width: 1px;
  margin-bottom: 0.5rem;
}

.emotion-3 {
  font-size: 1.25rem;
  line-height: 1.25;
  font-weight: 700;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

.emotion-4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  margin-top: 1rem;
}

.emotion-5 {
  padding: 1.25rem;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
  border-width: 1px;
}

<nav
    class="emotion-0 emotion-1"
    data-chakra-component="CStack"
    data-testid="stack"
  >
    <div
      class="emotion-2"
      data-chakra-component="CBox"
      data-testid="stack-child-1"
    >
      <h2
        class="emotion-3"
        data-chakra-component="CHeading"
      >
        Plan Money
      </h2>
       
      <p
        class="emotion-4"
        data-chakra-component="CText"
      >
        The future can be even brighter but a goal without a plan is just a wish
      </p>
    </div>
    <div
      class="emotion-5"
      data-chakra-component="CBox"
      data-testid="stack-child-2"
    >
      <h2
        class="emotion-3"
        data-chakra-component="CHeading"
      >
        Save Money
      </h2>
       
      <p
        class="emotion-4"
        data-chakra-component="CText"
      >
        You deserve good things. With a whooping 10-15% interest rate per annum, grow your savings on your own terms with our completely automated process
      </p>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`should render CStack with element as section 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  padding: 1.25rem;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
  border-width: 1px;
  margin-bottom: 0.5rem;
}

.emotion-3 {
  font-size: 1.25rem;
  line-height: 1.25;
  font-weight: 700;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

.emotion-4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  margin-top: 1rem;
}

.emotion-5 {
  padding: 1.25rem;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
  border-width: 1px;
}

<section
    class="emotion-0 emotion-1"
    data-chakra-component="CStack"
    data-testid="stack"
  >
    <div
      class="emotion-2"
      data-chakra-component="CBox"
      data-testid="stack-child-1"
    >
      <h2
        class="emotion-3"
        data-chakra-component="CHeading"
      >
        Plan Money
      </h2>
       
      <p
        class="emotion-4"
        data-chakra-component="CText"
      >
        The future can be even brighter but a goal without a plan is just a wish
      </p>
    </div>
    <div
      class="emotion-5"
      data-chakra-component="CBox"
      data-testid="stack-child-2"
    >
      <h2
        class="emotion-3"
        data-chakra-component="CHeading"
      >
        Save Money
      </h2>
       
      <p
        class="emotion-4"
        data-chakra-component="CText"
      >
        You deserve good things. With a whooping 10-15% interest rate per annum, grow your savings on your own terms with our completely automated process
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  padding: 1.25rem;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
  border-width: 1px;
  margin-bottom: 0.5rem;
}

.emotion-3 {
  font-size: 1.25rem;
  line-height: 1.25;
  font-weight: 700;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

.emotion-4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  margin-top: 1rem;
}

.emotion-5 {
  padding: 1.25rem;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
  border-width: 1px;
}

<div
    class="emotion-0 emotion-1"
    data-chakra-component="CStack"
    data-testid="stack"
  >
    <div
      class="emotion-2"
      data-chakra-component="CBox"
      data-testid="stack-child-1"
    >
      <h2
        class="emotion-3"
        data-chakra-component="CHeading"
      >
        Plan Money
      </h2>
       
      <p
        class="emotion-4"
        data-chakra-component="CText"
      >
        The future can be even brighter but a goal without a plan is just a wish
      </p>
    </div>
    <div
      class="emotion-5"
      data-chakra-component="CBox"
      data-testid="stack-child-2"
    >
      <h2
        class="emotion-3"
        data-chakra-component="CHeading"
      >
        Save Money
      </h2>
       
      <p
        class="emotion-4"
        data-chakra-component="CText"
      >
        You deserve good things. With a whooping 10-15% interest rate per annum, grow your savings on your own terms with our completely automated process
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render empty children correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
    class="emotion-0 emotion-1"
    data-chakra-component="CStack"
  />
</DocumentFragment>
`;

exports[`should should stack native html elements 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.emotion-3 {
  margin-bottom: 0.5rem;
}

.emotion-5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  margin-top: 1rem;
}

<div
    class="emotion-0 emotion-1"
    data-chakra-component="CStack"
    data-testid="stack"
  >
    <p
      class="emotion-2"
      data-chakra-component="CText"
    >
      The future can be even brighter but a goal without a plan is just a wish
    </p>
    <div
      class="emotion-3"
      data-chakra-component="CBox"
    >
      <p
        data-testid="stacked-p"
      >
        I am a happy paragraph element
      </p>
    </div>
    <div
      class="emotion-3"
      data-chakra-component="CBox"
    >
      <h3
        data-testid="stacked-h3"
      >
        I am a jolly heading element
      </h3>
    </div>
    <p
      class="emotion-5"
      data-chakra-component="CText"
    >
      You deserve good things. With a whooping 10-15% interest rate per annum, grow your savings on your own terms with our completely automated process
    </p>
  </div>
</DocumentFragment>
`;
